--- a/frontend/src/common/components/Icon/SvgIcon.scss
+++ b/frontend/src/common/components/Icon/SvgIcon.scss
@@ -8,13 +8,15 @@
     max-width: 100%;
     height: auto;
     /* CSS filter to display SVGs in #ABBCCD color */
-    filter: brightness(0) saturate(100%) invert(84%) sepia(5%) saturate(1013%) hue-rotate(178deg) brightness(89%) contrast(84%);
+    filter: brightness(0) saturate(100%) invert(84%) sepia(5%) saturate(1013%) hue-rotate(178deg)
+      brightness(89%) contrast(84%);
   }
 
   &--active {
     img {
       /* The active pink color from the design - using precise filter values for #FD7BF4 */
-      filter: brightness(0) saturate(100%) invert(65%) sepia(82%) saturate(5793%) hue-rotate(292deg) brightness(99%) contrast(98%);
+      filter: brightness(0) saturate(100%) invert(65%) sepia(82%) saturate(5793%) hue-rotate(292deg)
+        brightness(99%) contrast(98%);
     }
   }
 }
