--- a/frontend/src/common/components/Modal/ConfirmationModal.scss
+++ b/frontend/src/common/components/Modal/ConfirmationModal.scss
@@ -75,7 +75,7 @@
 
   // Handle the pull indicator
   &::part(handle) {
-    background: #D9D9D9;
+    background: #d9d9d9;
     width: 36px;
     height: 4px;
     border-radius: 2px;
