--- a/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
+++ b/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
@@ -13,13 +13,13 @@
   }
 
   &__status-bullet {
-      width: 8px;
-      height: 8px;
-      margin-top: 5px;
-      display: inline-block;
-      background-color: #fead7f;
-      border-radius: 50%;
-      vertical-align: middle;
+    width: 8px;
+    height: 8px;
+    margin-top: 5px;
+    display: inline-block;
+    background-color: #fead7f;
+    border-radius: 50%;
+    vertical-align: middle;
   }
 
   &__category-label {
@@ -51,15 +51,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 50%;
     transition: background-color 0.2s ease;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
 
     &--active {
-      background-color: #435FF0;
+      background-color: #435ff0;
       height: 34px;
-
     }
 
     &-icon {
