--- a/frontend/src/pages/Reports/components/ReportsFilterEmpty/ReportsFilterEmpty.scss
+++ b/frontend/src/pages/Reports/components/ReportsFilterEmpty/ReportsFilterEmpty.scss
@@ -16,13 +16,13 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    background-color: #EFF2F9;
+    background-color: #eff2f9;
     margin-bottom: 1.5rem;
   }
 
   &__icon {
     font-size: 36px;
-    color: #9BA7BF;
+    color: #9ba7bf;
   }
 
   &__title {
