--- a/frontend/src/pages/Auth/SignIn/SignInPage.scss
+++ b/frontend/src/pages/Auth/SignIn/SignInPage.scss
@@ -1,5 +1,5 @@
 .ls-signin-page {
-  --ion-background-color: #1a233f;
+  --ion-background-color: transparent;
 
   &__background {
     width: 100%;
@@ -7,7 +7,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     padding: 2rem 1.5rem;
+    background-color: #1c1e2e;
+    background-image: url('../../../../src/assets/Splash.png');
+    background-size: cover;
+    background-position: center;
+    position: relative;
   }
 
   &__logo-container {
@@ -15,6 +21,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 2.5rem;
+    margin-top: 2rem;
   }
 
   &__logo {
@@ -35,7 +42,8 @@
     background-color: white;
     border-radius: 1.5rem;
     padding: 2.5rem 2rem;
-    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0.5rem 1.5rem rgb(0 0 0 / 15%);
+    z-index: 1;
   }
 
   &__header {
