--- a/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
+++ b/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
@@ -1,31 +1,87 @@
 .ls-signup-form {
-  padding: 1rem;
+  width: 100%;
 
-  .ls-signup-form__input {
-    margin-bottom: 1rem;
+  &__content {
+    padding: 1.5rem;
   }
 
-  .ls-signup-form__button {
-    margin-top: 1rem;
+  &__title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 0 0 0.25rem;
+    color: #333;
+  }
+
+  &__subtitle {
+    font-size: 0.9rem;
+    margin: 0 0 1.5rem;
+    color: #666;
+  }
+
+  &__input {
+    margin-bottom: 1rem;
+
+    ion-input {
+      --border-radius: 8px;
+      --border-width: 1px;
+      --border-color: #d1d1d1;
+      --padding-start: 12px;
+      --padding-end: 12px;
+      --padding-top: 12px;
+      --padding-bottom: 12px;
+      --background: #fff;
+    }
+  }
+
+  &__button {
+    margin-top: 1.5rem;
+
+    --border-radius: 8px;
+    --background: #734bff;
+    --background-activated: #5a3acc;
+    --background-focused: #5a3acc;
+    --background-hover: #5a3acc;
+    --color: white;
+
+    font-weight: 500;
+    height: 48px;
+    text-transform: none;
+
+    &[disabled] {
+      --background: #e6e6e6;
+      --color: #a0a0a0;
+
+      opacity: 1;
+    }
+  }
+
+  &__login-link {
+    text-align: center;
+    margin-top: 1.25rem;
+    font-size: 0.9rem;
+
+    a {
+      color: #734bff;
+      font-weight: 500;
+      text-decoration: none;
+    }
   }
 
   &__password-guidelines {
-    margin-top: -0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-top: -0.25rem;
     margin-bottom: 1rem;
     font-size: 0.85rem;
-
-    &-header {
-      margin-bottom: 0.25rem;
-      font-weight: 500;
-    }
 
     &-item {
       display: flex;
       align-items: center;
-      margin-bottom: 0.125rem;
 
       &-icon {
         margin-right: 0.375rem;
+        font-size: 1.1rem;
       }
 
       &-valid {
@@ -33,7 +89,7 @@
       }
 
       &-invalid {
-        color: var(--ion-color-medium);
+        color: #c5c5c5;
       }
     }
   }
