feat: add background image to ReportDetailPage header and remove normal values filtering

--- a/frontend/src/pages/ReportDetail/ReportDetailPage.scss
+++ b/frontend/src/pages/ReportDetail/ReportDetailPage.scss
@@ -8,6 +8,7 @@
   &__header {
     padding: 20px var(--padding-horizontal) 16px;
     position: relative;
+    background-image: url('../../assets/img/report-header-bg.svg');
   }
 
   &__title-container {
