--- a/frontend/src/common/components/AIAssistant/AIAssistantModal.scss
+++ b/frontend/src/common/components/AIAssistant/AIAssistantModal.scss
@@ -1,9 +1,17 @@
+.ai-assistant-modal-body {
+  border: 1px solid #fbd3f8;
+  border-radius: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
 .ai-assistant-modal {
   --height: auto;
   --max-height: 70vh;
   --border-radius: 1rem;
-  --box-shadow: 0 -0.25rem 1rem rgba(0, 0, 0, 0.1);
+  --box-shadow: 0 -0.25rem 1rem rgb(0 0 0 / 10%);
   --backdrop-opacity: 0.3;
+
   align-items: flex-end;
   transition:
     --height 0.3s ease-out,
@@ -14,13 +22,13 @@
     --max-height: 85vh;
 
     &::part(content) {
-      margin: 2rem 1rem 5rem 1rem;
+      margin: 2rem 1rem 5rem;
     }
   }
 
   &::part(content) {
     border-radius: var(--border-radius);
-    margin: 0 1rem 5rem 1rem;
+    margin: 0 1rem 5rem;
     display: flex;
     flex-direction: column;
     transition: margin 0.3s ease-out;
@@ -62,8 +70,10 @@
 
   .ai-assistant-content {
     --padding: 0;
+
     flex: 1;
-    overflow: hidden;
+    overflow: scroll;
+    height: 80%;
   }
 
   .ai-assistant-footer {
