--- a/frontend/src/common/components/Chat/ChatInput.scss
+++ b/frontend/src/common/components/Chat/ChatInput.scss
@@ -16,14 +16,17 @@
       flex: 1;
       width: 100%;
       background-color: var(--ion-color-light);
+
       --padding-start: 1rem;
       --padding-end: 1rem;
       --padding-top: 0.75rem;
       --padding-bottom: 0.75rem;
       --placeholder-color: var(--ion-color-medium);
       --placeholder-opacity: 0.8;
+
       border-radius: 1.5rem;
       margin-right: 3.5rem;
+      border: 1px solid #ccc;
     }
 
     .send-fab {
@@ -32,6 +35,7 @@
       .send-button {
         --background: var(--ion-color-primary);
         --ion-color-base: var(--ion-color-primary);
+
         width: 3rem;
         height: 3rem;
         margin: 0;
