--- a/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
+++ b/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
@@ -82,9 +82,10 @@
       &-icon {
         margin-right: 0.375rem;
         font-size: 1.1rem;
+        color: var(--ion-color-medium);
       }
 
-      &-valid {
+      &.valid {
         color: var(--ion-color-success);
       }
 
